--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -18,6 +19,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
